@@ -314,7 +314,7 @@ td { padding-left: 5px; }
 	margin-top: -100px;
 	position: relative;
 	width: 400px;
-    z-index: 1100;
+    z-index: 1090;
 }
 
 /* === MENU === */
